<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Garbify</string>
    <string name="live_classify_btn_text">开始分类</string>
    <string name="slogan">垃圾分类小助手</string>
    <string name="pick_a_pic_btn_text">从相册选择</string>
    <string name="loading_msg">耗时操作，请稍等……</string>

    <string name="yes_btn_text">好</string>
    <string name="no_btn_text">不好</string>

    <string name="grant_title">权限请求</string>
    <string name="grant_camera_msg">该功能需要相机权限，请授权。</string>

    <string name="grant_read_ex_msg">该功能需要读取外部文件权限，请授权。</string>

    <string name="nav_home_text">主页</string>
    <string name="nav_home_user">我</string>

    <string name="logout_msg">点我登录</string>

    <string name="predict_history_text">识别历史</string>
    <string name="garbage_knowledge_text">垃圾分类知识科普</string>
    <string name="user_profile_text">个人中心</string>
    <string name="sign_out_text">登出</string>
    <string name="settings_text">设置</string>
    <string name="about_me_text">关于</string>
    <string name="exit_text">退出</string>

    <string name="clear_history_title">清空历史</string>
    <string name="clear_history_msg">该操作会清空当前用户下的所有识别历史，继续？</string>
    <string name="history_is_blank_msg">无需清空。</string>

    <string name="about_me_msg">版本：%s</string>

    <string name="sign_out_msg">是否登出？</string>

    <string name="log_in_text">登录</string>
    <string name="sign_up_text">注册</string>

    <string name="account_input_hint">账号</string>
    <string name="password_input_hint">密码</string>
    <string name="password_again_input_hint">确认密码</string>
    <string name="nickname_input_hint">昵称</string>

    <string name="go_2_sign_up_btn_text">注册账户</string>
    <string name="go_2_log_in_btn_text">已有账号？去登录</string>
    <string name="forget_password_btn_text">忘记密码</string>

    <string name="log_in_no_user_err_msg">账户不存在或密码错误。</string>
    <string name="log_in_suc_msg">欢迎回来！</string>

    <string name="show_id_title">注册成功</string>
    <string name="show_id_msg">这是您的账号：%s。作为登录的唯一凭证，请妥善保管！</string>

    <string name="recyclable_knowledge">
        <font color="#000000">\t\t可回收物指适宜回收利用和资源化利用的生活废弃物。</font>\n
        \t\t主要品种包括：废纸、废弃塑料瓶、废金属、
        废包装物、废旧纺织物、废弃电器电子产品、废玻璃、废纸塑铝复合包装等。\n
        \t\t根据<font color="#000000">
        《城市生活垃圾分类及其评价标准》</font>
        行业标准以及参考<font color="#000000">德国垃圾分类法</font>，可回收物是指适宜回收循环使用和资源利用的废物。主要包括：\n
        <font color="#000000">\t\t• 纸类：</font>未严重玷污的文字用纸、包装用纸和其他纸制品等。如报纸、各种包装纸、办公用纸、广告纸片、纸盒、复印纸等；\n
        <font color="#000000">\t\t• 塑料：</font>废容器塑料、包装塑料等塑料制品。比如各种塑料袋、塑料瓶、泡沫塑料、一次性塑料餐盒餐具、硬塑料等；\n
        <font color="#000000">\t\t• 金属：</font>各种类别的废金属物品。如易拉罐、铁皮罐头盒、铅皮牙膏皮等；\n
        <font color="#000000">\t\t• 玻璃：</font>有色和无色废玻璃制品；\n
        <font color="#000000">\t\t• 织物：</font>旧纺织衣物和纺织制品。有害垃圾是指油漆、颜料、各类清洗液、电子垃圾和电池。
    </string>

    <string name="dry_knowledge">
        <font color="#000000">\t\t干垃圾即其它垃圾，指除可回收物、有害垃圾、湿垃圾以外的其它生活废弃物。</font>\n
        \t\t干垃圾包括废弃的纸张、塑料、玻璃、烟头、 金属、织物等，还包括报废车辆、家电家具、装修废弃物等大型的垃圾。\n
        \t\t对其采取卫生填埋可有效减少对地下水、地表水、土壤及空气的污染，在当今社会，还无有效化解其他垃圾的好方法，所以需尽量少产生。
    </string>

    <string name="wet_knowledge">
        <font color="#000000">
        \t\t湿垃圾又称为厨余垃圾、有机垃圾，即易腐垃圾，指食材废料、剩菜剩饭、过期食品、瓜皮果核、花卉绿植、中药药渣等易腐的生物质生活废弃物。
        </font>\n
        \t\t湿垃圾是居民日常生活及食品加工、饮食服务、单位供餐等活动中产生的垃圾，
        包括丢弃不用的菜叶、剩菜、剩饭、果皮、蛋壳、茶渣、骨头、动物内脏、鱼鳞、树叶、杂草等，
        其主要来源为家庭厨房、餐厅、饭店、食堂、市场及其他与食品加工有关的行业。主要包括：\n
        <font color="#000000">\t\t• 食材废料：</font>
        谷物及其加工食品（米、米饭、面、面包、豆类）、
        肉蛋及其加工食品（鸡、鸭、猪、牛、羊肉、蛋、动物内脏、腊肉、午餐肉、蛋壳）、
        水产及其加工食品（鱼、鱼鳞、虾、虾壳、鱿鱼）、蔬菜（绿叶菜、根茎蔬菜、菌菇）、调料、酱料等。\n
        <font color="#000000">\t\t• 剩菜剩饭：</font>火锅汤底（沥干后的固体废弃物）、鱼骨、碎骨、茶叶渣、咖啡渣、中药药渣等。\n
        <font color="#000000">\t\t• 过期食品：</font>糕饼、糖果、风干食品（肉干、红枣、中药材）、粉末类食品（冲泡饮料、面粉）、宠物饲料等。\n
        <font color="#000000">\t\t• 瓜皮果核：</font>水果果肉（椰子肉）、水果果皮（西瓜皮、桔子皮、苹果皮）、水果茎枝（葡萄枝）、果实（西瓜籽）等。\n
        <font color="#000000">\t\t• 花卉植物：</font>家养绿植、花卉、花瓣、枝叶等。
    </string>

    <string name="hazardous_knowledge">
        <font color="#000000">\t\t有害垃圾指对人体健康或者自然环境造成直接或者潜在危害的生活废弃物。\n
        </font>\t\t常见的有害垃圾包括废灯管、废油漆、杀虫剂、废弃化妆品、过期药品、废电池、废灯泡、废水银温度计等，有害垃圾需按照特殊正确的方法安全处理。主要包括：\n
        <font color="#000000">\t\t• 废镍镉电池和废氧化汞电池：</font>充电电池、锂电池、镉镍电池、铅酸电池、蓄电池、纽扣电池等电池等。\n
        <font color="#000000">\t\t• 废荧光灯管：</font>荧光（日光）灯管、卤素灯等。\n
        <font color="#000000">\t\t• 废药品及其包装物：</font>过期药物、药物胶囊、药片、药品内包装、酒精、口罩、使用过的医用纱布棉签等。\n
        <font color="#000000">\t\t• 废油漆和溶剂及其包装物：</font>废油漆桶、染发剂壳、过期的指甲油、洗甲水等。\n
        <font color="#000000">\t\t• 废矿物油及其包装物。</font>
        <font color="#000000">\t\t• 废含汞温度计、废含汞血压计：</font>水银血压计、水银体温计、水银温度计等。\n
        <font color="#000000">\t\t• 废杀虫剂及其包装：</font>老鼠药（毒鼠强等）、杀虫喷雾罐、其他杀虫药物等。\n
        <font color="#000000">\t\t• 废胶片及废相纸：</font>x光片等感光胶片、相片底片等。
    </string>

    <string name="knowledge_src_text">摘抄自百度百科</string>
</resources>