<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeFragment">

    <ImageView
        android:id="@+id/logoImg"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="128dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/ic_main_logo"
        app:layout_constraintDimensionRatio="4:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/guideTop"
        app:tint="?attr/colorPrimary" />

    <TextView
        android:id="@+id/sloganText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="16dp"
        android:letterSpacing="0.3"
        android:text="@string/slogan"
        android:textAlignment="center"
        android:textColor="@color/light_gray"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logoImg" />


    <Button
        android:id="@+id/livePredictBtn"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="8dp"
        android:background="@drawable/rounded_button"
        android:foreground="@drawable/white_ripple"
        android:minHeight="54dp"
        android:text="@string/live_classify_btn_text"
        android:textSize="16sp"
        android:textStyle="bold"
        app:backgroundTint="@null"
        app:icon="@drawable/ic_camera"
        app:iconGravity="textStart"
        android:elevation="4dp"
        app:iconPadding="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintBottom_toTopOf="@id/pickAPicBtn"
        app:layout_constraintEnd_toEndOf="@id/btnAreaGuideRight"
        app:layout_constraintStart_toStartOf="@id/btnAreaGuideLeft"
        app:layout_constraintTop_toBottomOf="@+id/sloganText"
        app:layout_constraintVertical_chainStyle="packed" />

    <Button
        android:id="@+id/pickAPicBtn"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="8dp"
        android:background="@android:color/transparent"
        android:text="@string/pick_a_pic_btn_text"
        android:textColor="@drawable/rounded_secondary_button"
        android:textSize="16sp"
        android:textStyle="bold"
        app:backgroundTint="@null"
        app:icon="@drawable/ic_image"
        app:iconGravity="textStart"
        app:iconPadding="12dp"
        app:iconTint="@drawable/rounded_secondary_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/btnAreaGuideRight"
        app:layout_constraintStart_toStartOf="@id/btnAreaGuideLeft"
        app:layout_constraintTop_toBottomOf="@+id/livePredictBtn" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/btnAreaGuideLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.2" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/btnAreaGuideRight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.8" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.15" />

</androidx.constraintlayout.widget.ConstraintLayout>