<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LogInActivity">

    <TextView
        android:id="@+id/titleText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:letterSpacing="0.15"
        android:text="@string/log_in_text"
        android:textColor="@android:color/black"
        android:textSize="48sp"
        app:layout_constraintEnd_toStartOf="@id/guideRight"
        app:layout_constraintStart_toStartOf="@id/guideLeft"
        app:layout_constraintTop_toTopOf="@id/guideTop" />

    <EditText
        android:id="@+id/idInput"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginTop="48dp"
        android:autofillHints="personName"
        android:background="@drawable/rounded_input"
        android:hint="@string/account_input_hint"
        android:inputType="number"
        android:letterSpacing="0.1"
        android:maxLength="6"
        android:maxLines="1"
        android:paddingHorizontal="24dp"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@id/guideRight"
        app:layout_constraintStart_toStartOf="@id/guideLeft"
        app:layout_constraintTop_toBottomOf="@id/titleText" />

    <EditText
        android:id="@+id/passwordInput"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginTop="24dp"
        android:autofillHints="password"
        android:background="@drawable/rounded_input"
        android:hint="@string/password_input_hint"
        android:inputType="textPassword"
        android:letterSpacing="0.1"
        android:maxLength="12"
        android:maxLines="1"
        android:paddingHorizontal="24dp"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@id/guideRight"
        app:layout_constraintStart_toStartOf="@id/guideLeft"
        app:layout_constraintTop_toBottomOf="@id/idInput" />

    <ImageButton
        android:id="@+id/logInBtn"
        android:layout_width="72dp"
        android:layout_height="72dp"
        android:layout_marginTop="56dp"
        android:adjustViewBounds="true"
        android:background="@drawable/rounded_button"
        android:clickable="true"
        android:focusable="true"
        android:elevation="4dp"
        android:foreground="@drawable/white_ripple"
        android:padding="22dp"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_chevron_right"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordInput"
        app:tint="@android:color/white" />

    <Button
        android:id="@+id/go2SignUpBtn"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:text="@string/go_2_sign_up_btn_text"
        android:textColor="@drawable/rounded_secondary_button"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@id/guideBottom"
        app:layout_constraintEnd_toStartOf="@id/guideRight"
        app:layout_constraintStart_toStartOf="@id/guideLeft"
        app:layout_constraintVertical_chainStyle="spread" />

    <!--    <Button-->
    <!--        android:id="@+id/forgetPasswordBtn"-->
    <!--        style="?android:attr/borderlessButtonStyle"-->
    <!--        android:layout_width="wrap_content"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:background="@android:color/transparent"-->
    <!--        android:text="@string/forget_password_btn_text"-->
    <!--        android:textColor="@drawable/rounded_secondary_button"-->
    <!--        android:textSize="14sp"-->
    <!--        app:layout_constraintBottom_toBottomOf="parent"-->
    <!--        app:layout_constraintEnd_toStartOf="@id/guideRight"-->
    <!--        app:layout_constraintStart_toEndOf="@id/go2SignUpBtn" />-->


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.075" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideBottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.95" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.15" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideRight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.85" />

</androidx.constraintlayout.widget.ConstraintLayout>